@@ -13,6 +13,8 @@
 <dd>Information about using sp_cursoropen with parameters</dd>
 <dt><a href="http://www.inetsoftware.de/English/Produkte/JDBCTreiber/SqlStates.htm">SQL states returned by the i-net drivers</a></dt>
 <dd>SQL state values with the associated vendor codes (SQL Server-specific error code). Could prove very useful for a correct implementation of exception handling.</dd>
+<dt><a href="http://msdn.microsoft.com/library/default.asp?url=/library/en-us/odbcsql/od_6_015_0tf7.asp">Effects of SQL-92 Options</a></dt>
+<dd>Effects of SQL-92 Options. ODBC and SQL Server.</dd>
 </dl>
 </body>
 
